<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="@color/green"
    android:padding="20dp">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="196dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_banner" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="379dp"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/bungee"
        android:text="Login to Your Account"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="169dp"
        android:layout_height="35dp"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp"
        android:transitionName="logo_desc"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="257dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/facebook_login"
            android:layout_width="58dp"
            android:layout_height="48dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/facebook"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="294dp" />

        <ImageView
            android:id="@+id/google_login"
            android:layout_width="58dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/google1"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="294dp" />

        <ImageView
            android:id="@+id/twitter_login"
            android:layout_width="58dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/twitter"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="208dp"
            tools:layout_editor_absoluteY="294dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="317dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="logo_text"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            android:hint="@string/enter_username">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="text"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textColorHint="@color/black"
            android:transitionName="password_tran"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />


        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/remember_me_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:text="@string/remember_me"
                android:buttonTint="@color/black"
                android:textColor="@color/black"
                android:layout_centerVertical="true"/>

            <Button
                android:id="@+id/forget_password_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:background="#00000000"
                android:elevation="0dp"
                android:text="@string/forget_password"
                android:textColor="#FF000000"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_background_green2"
            android:fontFamily="@font/bungee"
            android:text="@string/login"
            android:textColor="#FAF9F6"
            android:textSize="18sp"
            android:textStyle="bold"
            android:transitionName="button_tran" />

        <Button
            android:id="@+id/new_user_btn"
            android:layout_width="369dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:textSize="16sp"
            android:text="New User? SIGNUP"
            android:textColor="#FF000000" />


    </LinearLayout>


</LinearLayout>